--- a/.env.local.example
+++ b/.env.local.example
@@ -1,28 +1,33 @@
-NEXTAUTH_URL=http://localhost:3000
-NEXTAUTH_SECRET= # Linux: `openssl rand -hex 32` or go to https://generate-secret.now.sh/32
+NEXTAUTH_URL=
 
-APPLE_ID=
-APPLE_TEAM_ID=
-APPLE_PRIVATE_KEY=
-APPLE_KEY_ID=
-
-AUTH0_ID=
-AUTH0_SECRET=
-AUTH0_ISSUER=
-
-FACEBOOK_ID=
-FACEBOOK_SECRET=
-
-GITHUB_ID=
-GITHUB_SECRET=
 
 GOOGLE_ID=
 GOOGLE_SECRET=
 
-TWITTER_ID=
-TWITTER_SECRET=
+FIREBASE_PROJECT_ID=
+FIREBASE_CLIENT_EMAIL=
+FIREBASE_PRIVATE_KEY=
 
-EMAIL_SERVER=smtp://username:password@smtp.example.com:587
-EMAIL_FROM=NextAuth <noreply@example.com>
+FIREBASE_DATABASE_URL=
 
-DATABASE_URL=sqlite://localhost/:memory:?synchronize=true
+GOOGLE_APPLICATION_CREDENTIALS=
+
+EMAIL_SERVER_USER=
+EMAIL_SERVER_PASSWORD=
+EMAIL_SERVER_HOST=
+EMAIL_SERVER_PORT=
+EMAIL_FROM=
+
+DATABASE_URL=
+
+NEXTAUTH_SECRET=
+
+# firebase config
+
+API_KEY=
+AUTH_DOMAIN=
+PROJECT_ID=
+
+# word wise api url
+
+NEXT_PUBLIC_MAIN_SERVICE=
