--- a/package.json
+++ b/package.json
@@ -11,22 +11,58 @@
     "build": "next build",
     "start": "next start"
   },
-  "author": "Iain Collins <me@iaincollins.com>",
-  "contributors": [
-    "Balázs Orbán <info@balazsorban.com>",
-    "Nico Domino <yo@ndo.dev>",
-    "Lluis Agusti <hi@llu.lu>"
-  ],
+  "author": "Guilherme henrique <progr.guilherme@gmail.com>",
   "dependencies": {
-    "next": "latest",
-    "next-auth": "latest",
-    "nodemailer": "^6",
+    "@emoji-mart/data": "^1.1.2",
+    "@headlessui/react": "^1.7.15",
+    "@heroicons/react": "^1.0.6",
+    "@next-auth/firebase-adapter": "^2.0.1",
+    "axios": "^1.4.0",
+    "bcrypt": "^5.1.0",
+    "clsx": "^1.1.1",
+    "dotenv": "^16.3.1",
+    "emoji-mart": "^5.5.2",
+    "firebase": "^10.1.0",
+    "firebase-admin": "^11.10.1",
+    "formik": "^2.2.9",
+    "framer-motion": "^10.13.0",
+    "lodash": "^4.17.21",
+    "next": "^13.4.1",
+    "next-auth": "^4.22.3",
+    "nprogress": "^0.2.0",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "react-hot-toast": "^2.4.1",
+    "sass": "^1.64.0",
+    "yup": "^1.0.2"
   },
   "devDependencies": {
+    "@types/bcrypt": "^5.0.0",
+    "@types/bcryptjs": "^2.4.2",
+    "@types/lodash": "^4.14.195",
     "@types/node": "^17",
     "@types/react": "^18.0.37",
+    "@typescript-eslint/eslint-plugin": "^5.56.0",
+    "autoprefixer": "^10.4.14",
+    "eslint": "^8.36.0",
+    "eslint-config-next": "^13.4.1",
+    "eslint-config-prettier": "^8.8.0",
+    "eslint-config-react-app": "^7.0.1",
+    "eslint-import-resolver-alias": "^1.1.2",
+    "eslint-plugin-cypress": "^2.13.2",
+    "eslint-plugin-import": "^2.27.5",
+    "eslint-plugin-jest": "^27.2.1",
+    "eslint-plugin-jsx-a11y": "^6.7.1",
+    "eslint-plugin-no-relative-import-paths": "^1.5.2",
+    "eslint-plugin-prettier": "^4.2.1",
+    "eslint-plugin-react": "^7.32.2",
+    "eslint-plugin-react-hooks": "^4.6.0",
+    "eslint-plugin-tailwindcss": "^3.10.1",
+    "eslint-plugin-testing-library": "^5.10.2",
+    "next-translate-plugin": "^2.5.2",
+    "postcss": "^8.4.26",
+    "prettier": "^3.0.0",
+    "tailwindcss": "^3.3.3",
     "typescript": "^4"
   }
 }
